# ferragate

./: .env.example  .gitignore  .rustfmt.toml  .yamllint.yml  Cargo.toml  Dockerfile  Makefile  README.md  ai-context.json  codecov.yml  deny.toml  docker-compose.yml  gateway-https.toml  gateway.toml  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  label.yml  nightly.yml  release.yml
benches/: health_benchmarks.rs  proxy_benchmarks.rs  route_benchmarks.rs
certs/: server.crt  server.key
docs/: API_REFERENCE.md  ARCHITECTURE.md  CI_CD.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  HTTPS_GUIDE.md  HTTPS_IMPLEMENTATION.md  README.md  TROUBLESHOOTING.md
logs/: .gitkeep
scripts/: setup-cicd.sh
src/: cli.rs  config.rs  constants.rs  error.rs  health.rs  lib.rs  logging.rs  main.rs  proxy.rs  server.rs  tls.rs
tests/: integration_tests.rs
tests/common/: mod.rs
